--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     <!-- Author -->
     <meta
       name="author"
-      content="Created by: Brainstation Team 1 (Team Spectra) - Alessandra Bondoc, Chelsea Wu, Nick Doucette and Sunshine Agoo"
+      content="Created by: Brainstation Team 1 (Team Spectra) - Alessandra Bondoc (Head of UX Design), Chelsea Wu (Dead of Data Science), Nick Doucette (Head of Software Engineering), Sunshine Agoo (Team Lead), Karan Kalra, Kenna Ebegbulem, and Dakota Cootes"
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
