Updated readme file images

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,13 +9,13 @@
     <!-- Project Description -->
     <meta
       name="description"
-      content="Dell Technologies Spectra: A PaaS solution for monitoring and ensuring MSRP compliance for Dell products across authorized retailers."
+      content="Spectra: A PaaS solution for monitoring and ensuring MSRP compliance for Dell products across authorized retailers."
     />
 
     <!-- Project Keywords -->
     <meta
       name="keywords"
-      content="Dell Technologies, Spectra, MSRP Compliance, Retailer Monitoring, Pricing Data, E-commerce"
+      content="Spectra, MSRP Compliance, Retailer Monitoring, Pricing Data, E-commerce"
     />
     
     <!-- Author -->
@@ -26,7 +26,7 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Dell Technologies - Spectra</title>
+    <title>Spectra</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
