Updated ico on all pages

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       content="Created by: Brainstation Team 1 (Team Spectra) - Alessandra Bondoc (Head of UX Design), Chelsea Wu (Dead of Data Science), Nick Doucette (Head of Software Engineering), Sunshine Agoo (Team Lead), Karan Kalra, Kenna Ebegbulem, and Dakota Cootes"
     />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./images/spectra-molecule.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Spectra</title>
   </head>
